--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="loaderio" content="f48502712a8d203994296879c68250fe">
     <title>Demo Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
